2009-03-10 Denton Woods <doomwiz@users.sf.net>
	* lib/Makefile.am: Added ilut_config.h.

2009-03-08 Matěj Týč <bubla@users.sf.net>
	* docs/Makefile.am: Fixed distcheck by overriding dvi target.
	* lib/Makefile.am: Renoved ilu_mipmap.h file
	* configure.ac: Added option to disable checks for 'nvidia texture tools' and
	'libsquish'

2009-03-08 Denton Woods <doomwiz@users.sf.net>
	* il_ilbm.c:410: Changed to IL_BGR from IL_RGB.
	* il_iff.c (ilLoadIffF/ilLoadIffL): Changed to call Lbm loading functions
	  if Iff loading fails, since they both can have the .iff extension.
	* il_ilbm.c:416: Added origin reference.
	* configure.ac: Added more file formats to the format checks.
	* Makefile.am: Removed ilu_mipmap.h.  Added ilu_error-french.h.

2009-03-07 Denton Woods <doomwiz@users.sf.net>
	* Updated version numbers to 1.7.8 project-wide.
	* DevIL_manual.texi: Added several file formats to the appendix.
	* il_io.c: Updated Doxygen comments for loading/saving functions.
	* libraries.txt: Updated with new libraries.
	* il_io.c (ilTypeFromExt): Changed return value of FITS files to IL_FITS.
		Added DICOM, FTX, Rot and Texture checks.
	* il_states.c/.h: Updated with newer file formats.
	* il_blp.c:649: Fixed ilNewImageFull call to use color index.
			   659: Fixed memcpy from base image to new mipmap.
	* il_dcx.c, il_exr.cpp and many more: Checks return value of ilFixImage now.
	* il_iff.c:271: Got rid of ilConvertImage call.

2009-03-06 Denton Woods <doomwiz@users.sf.net>
	* Updated VC8 projects to use il_mp3.c.
	* il.h: Added description to IL_WDP.

2009-03-05 Denton Woods <doomwiz@users.sf.net>
	* il_mp3.c: Added this file.
	* il_io.c: Added loading calls for .mp3 files.
	* il_internal.h: Added .mp3 loading declarations.
	* Makefile.am: Added il_mp3.c to source line.
	* il.h: Added IL_MP3 define.

2009-03-04 Denton Woods <doomwiz@users.sf.net>
	* il_utx.cpp: Started cleanup of file using C++ constructs.
	* Updated VC8 projects to use il_utx.cpp.
